tests/suite/snapshots/suite__check__tests__check__bad-class-shadowing4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-class-shadowing4.xi:3:5]
   │
 3 │     c, a: int
   ·     ────┬────  
   ·         ╰────── Name already bound in environment
───╯

